test/extern/ferguson/global-var-type-mismatch.chpl
extern var global_myint: real(64); // type is wrong!

writeln(global_myint);
